<resources>
    <string name="app_name">DermApp</string>
    <string name="usuario">Usuario</string>
    <string name="usuario1">Nombre del Profesional</string>
    <string name="contra">Codigo</string>
    <string name="recontra">Repetir Codigo</string>
    <string name="correo">Correo Electronico</string>
    <string name="cancelar">Cancelar</string>
    <string name="entrar">Ingreso</string>
    <string name="registro">Registro</string>
    <string name="trab">Ingresar Sin Registro</string>
    <string name="codhos">Codigo Hospital</string>
    <string name="contra1">Cotraseña</string>
    <string name="recontra1">Repetir Contraseña</string>
    <string name="recodhos">Repetir Codigo Hospital</string>
    <string name="abrehos">Abreviatura</string>
    <string name="nombrehos">Nombre del Hospital</string>
    <string name="lat">Latitud</string>
    <string name="lon">Longitud</string>
    <string name="trab1">Registrar Hospital</string>
    <string name="casi2">Califica la aplicacion </string>
    <string name="casi3">Gracias por ayudarnos a ser mejores !</string>
    <string name="clas">Calificar</string>
    <string name="abierto">Open navigation drawer</string>
    <string name="cerrado">Close navigation drawer</string>
    <string name="valorax2">Recomendaciones a seguir al obtener su valorizacion UPP Braden</string>
    <string name="valora1">Escala de Valorizacion de Cicatrizacion: Resvech 1.0 y 2.0</string>
    <string name="valora2">Escala de Valoracion: Riesgo de Ulceras por Presion: Braden(UPP)</string>
    <string name="valora3">Valoracion de superficie corporal quemada: Regla de los 9 de Wallace</string>
    <string name="valor">Escala de Valorizacion:</string>
    <string name="valor2">Riesgo de Ulceras por Presion: Braden(UPP)</string>
    <string name="valor1">Cicatrizacion Resvech 1.0 y 2.0</string>
    <string name="valor3">Superficie corporal quemada: Regla de los 9 de Wallace</string>
    <string name="valoras1">Resvech</string>
    <string name="valoras2">Braden</string>
    <string name="valoras3">Wallace</string>
    <string name="valorasi1">Resvech</string>
    <string name="valorasi2">Valoracion del riesgo de deterioro de la integridad cutanea por la presencia de factores de riesgo para el desarrollo de ulceras por presion</string>
    <string name="valorasi3">Wallace</string>
    <string name="logginh1">El codigo ingresado ya ha sido asignado</string>
    <string name="logginh2">El nombre ingresado ya se encuetra registrado</string>
    <string name="logginh3">La abreviacion ingresada ya se encuentra registrada</string>
    <string name="logginp1">El codigo ingresado no corresponde a ningun hospital</string>
    <string name="logginp11">El nombre de usuario ya se encuentra registrado</string>
    <string name="loggin12">No ha ingresado el nombre del Profesional</string>
    <string name="loggin11">No ha ingresado el nombre del hospital</string>
    <string name="loggin1">No ha ingresado el nombre de usuario</string>
    <string name="loggin2">El nombre de usuario no se encuentra registrado</string>
    <string name="loggin3">No ha ingresado la contraseña</string>
    <string name="loggin4">No ha ingresado la contraseña correcta</string>
    <string name="loggin5">El nombre de usuario ya existe</string>
    <string name="loggin6">No ha ingresado la misma contraseña</string>
    <string name="loggin7">No ha ingresado el correo correcto</string>
    <string name="loggin8">No ha ingresado una direccion de correo correcto</string>
    <string name="loggin111">No ha ingresado el codigo del hospital</string>
    <string name="loggin71">No ha ingresado una abreviacion</string>
    <string name="loggin9">Usuario Registrado</string>
    <string name="loggin91">Hospital Registrado</string>
    <string name="loggin31">No ha ingresado el codigo</string>
    <string name="loggin61">No ha ingresado el mismo codigo</string>
    <string-array name="posiciones">
        <item>Menu Principal</item>
        <item>Perfil</item>
        <item>Valoraciones</item>
        <item>Calificacion</item>
        <item>Cerrar Sesion</item>
    </string-array>
    <string name="guias">Buscar Hospital</string>
    <string name="empezar">Empezar</string>
    <string name="main">Menu Principal</string>
    <string name="main1">Perfil</string>
    <string name="main2">Valoraciones</string>
    <string name="main7">Consejos y Tips</string>
    <string name="conse1">Cuidados para la Piel de la Cara</string>
    <string name="conse2">Una buena rutina de cuidado de la piel puede retrasar las señales naturales del envejecimiento y puede prevenir problemas de la piel como acné, resequedad, eccemas y quemaduras de sol:
</string>
    <string name="conse3">* Una piel cuidada e hidratada de cualquier edad siempre se verá mucho más bonita que una deshidratada y sin ningún sacrificio ya que con tres o cuatro productos será suficiente.</string>
    <string name="conse4">* En la rutina diaria siempre es igual para todos los tipos de pieles, la única diferencia dependiendo del tipo de piel, es el producto a usar y como usarlo.</string>
    <string name="conse5">Piel Seca</string>
    <string name="conse6">Piel de aspecto opaco y rugoso con tendencia a descamarse. Tiende a arrugarse más fácilmente que el de la piel grasa. El sol, el aire y la contaminación contribuyen a que se agraven estos efectos. La piel seca, es la que más cuidados necesita. Por la mañana sería preciso tratar esta piel con una crema hidratante así como una crema nutritiva por la noche.</string>
    <string name="conse7">Piel Sensible</string>
    <string name="conse8">Esta piel es delicada, ligeramente seca que se irrita fácilmente y propensa a reacciones alérgicas por cosméticos, perfumes o detergentes. Los cambios atmosféricos y climáticos y los cosméticos no apropiados pueden causar irritación, dejando la piel rojiza y a veces con visibles vasos sanguíneos.</string>
    <string name="conse9">Piel Normal</string>
    <string name="conse10">Esta piel tiene una textura suave, no tiene espinillas ni poros abiertos. No presenta áreas grasosas o resecas. Las personas con este tipo de piel solo necesitan un régimen básico de belleza para mantener el balance natural. Pero sin cuidarse la piel y sin una alimentación adecuada la belleza de esta piel no dura por largo tiempo.</string>
    <string name="conse11">Piel Mixta</string>
    <string name="conse12">Debido a que en este tipo de pieles existe una zona seca y otra más bien grasa, es preciso efectuar una rutina de cuidados que tenga en cuenta ambos aspectos: hidratar la zona seca y reducir la secreción sebácea en la zona grasa.</string>
    <string name="conse13">Piel Grasa</string>
    <string name="conse14">Esta piel se caracteriza por una sobre producción de sebo y aceites lo que resulta en espinillas, poros abiertos, puntos negros y barros. La piel grasa es especialmente común durante la adolescencia cuando los cambios hormonales promueven esta sobreproducción. La ventaja de esta piel es que se mantiene joven por mas tiempo. Esta piel requiere cuidados especiales con limpiadoras, lociones y cremas adaptadas a este tipo de piel y que impidan la acumulación de impurezas.</string>
    <string name="conses1">Tips para el cuidado</string>
    <string name="conses2">Hierbas naturales</string>
    <string name="conses3">Los tratamientos naturales a base de hierbas no sólo dejan tu piel suave y sedosa, sino que también la limpian y la dejan libre de acné. Los suplementos de hierbas con zinc, el aceite de árbol de té y la levadura de cerveza eliminan los puntos negros y las erupciones que van de leves a moderadas. Echa un vistazo a las golosinas naturales disponibles en tu tienda local de nutrición.</string>
    <string name="conses4">Leche</string>
    <string name="conses5">Agrega cuatro litros de leche a un atina llena de agua tibia y date un baño de tina por 20 minutos. Al terminar enjuaga tu cuerpo y ya lo habrás cargado de proteínas, aminoácidos, vitaminas, minerales y calcio entre otros.</string>
    <string name="conses6">Limón y Miel</string>
    <string name="conses7">El limón es un astringente natural y puede ayudar a controlar la producción de grasa. En una Ponga en una taza el jugo de dos limones y un poco de miel, mezcle y aplique la mezcla por la noche sobre la zona donde tiene problemas de piel grasa (deje actuar por 15 minutos), al terminar lave la cara con agua tibia.</string>
    <string name="conses8">Beber Agua</string>
    <string name="conses9">La hidratación de la piel viene de adentro, en los meses de calor normalmente estamos hidratándonos con todo tipo de líquidos que consumimos en las bebidas, los refrescos, las sopas y caldos; sin embargo no debemos dejar de ingerir al menos 1 litro de agua, así no tengamos sed, el agua además de limpiar el organismo contribuye a la hidratación y mantiene la piel limpia y sana.</string>
    <string name="conses10">Yogurt Natural</string>
    <string name="conses11">Para los casos de pieles extremadamente seca se recomienda mezclar tres cucharadas de yogurt natural, una yema de huevo y media cucharadita de miel en un recipiente para aplicar en el rostro y dejar por 30 minutos para que absorba, luego enjuagar con agua tibia para que al cabo de un par de días tu piel comience a lucir hidratada.
</string>
    <string name="cuer">Cuidados para la Piel del Cuerpo</string>
    <string name="cuer1">Proteja la piel del sol</string>
    <string name="cuer2">Para mantener la piel saludable, no salgas al sol sin protección. Aplica una crema solar con un SPF que esté adaptado a tu tipo de piel. Repite la aplicación de manera regular. También es recomendable que no se esté bajo el sol durante las horas de más calor del día.</string>
    <string name="cuer3">Jabón suave para la piel</string>
    <string name="cuer4">¿La piel de tu cuerpo tiende a secarse, sobre todo después de la ducha? Es importante usar productos de cuidado de la piel suaves y sin jabón para la rutina de limpieza. Si utilizas productos demasiado fuertes, tu piel puede volverse extremadamente seca y sentirse molesta. Los mejores productos que se pueden usar son: jabones ricos en lípidos.</string>
    <string name="cuer5">En la ducha</string>
    <string name="cuer6">Para la piel es mejor la ducha que el baño, que tiende a deshidratar la piel. Asegúrate de que el agua esté templada mejor que caliente. Para los amantes del baño, esta bien darse un baño de tanto en cuanto. Sin embargo, ¡no permanezcas en el agua mucho tiempo!</string>
    <string name="cuer7">Secar con suavidad la piel</string>
    <string name="cuer8">Antes de que te salgas de la ducha, aclara el cuerpo entero bien para eliminar cualquier resto del producto de limpieza. Después seca con rapidez la piel dando suaves golpecitos en las piernas, pecho, brazos, etc. con la toalla. NO frotes la piel con agresividad hasta que esté seca.</string>
    <string name="cuer9">Hidratar la piel a diario</string>
    <string name="cuer10">¡Haz de la hidratación un hábito diario! Después de darte suaves golpecitos con la toalla para secar la piel, utiliza una crema adecuada para hidratar la piel de manera efectiva. Esto te ayudará a reparar la película hidrolipídica que cubre la epidermis. No te olvides de que hay que hidratar TODOS LOS TIPOS DE PIEL!</string>
    <string name="cuer11">Cuidado con el frio</string>
    <string name="cuer12">el clima frío, al igual que el viento y el sol, tiende a secar la piel, dejándola con una molesta sensación de tirantez y picor. Tan pronto como las temperaturas disminuyen, asegúrate de que te abrigas. ¡Y no olvides protegerte las manos!</string>
    <string name="cuer13">Comer saludablemente</string>
    <string name="cuer14">Una dieta saludable y equilibrada no es solo buena para tu cuerpo sino también para tu piel. Cada día debes comer cinco piezas de fruta y verduta, ricas en antioxidantes. Esto te ayudará a mantener tu piel bella y saludable.</string>
</resources>