<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    tools:context="com.danielcorrea.dermapp.RegisterHos"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:text="@string/nombrehos"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:inputType="textPersonName"
        android:id="@+id/nombrehos"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:text="@string/abrehos"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:inputType="textPersonName"
        android:id="@+id/abrehos"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:textSize="30dp"
        android:text="@string/codhos"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:inputType="textPassword"
        android:id="@+id/codhospi"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:text="@string/recodhos"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/azulito"
        android:inputType="textPassword"
        android:id="@+id/recodhospi"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/busca"
            android:background="@drawable/lup"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/azulito"
            android:textSize="30dp"
            android:text="@string/guias"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/registro"
            android:textColor="@color/white"
            android:background="@drawable/boton"
            android:textSize="25dp"

            android:id="@+id/acepthos"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:background="@drawable/boton"
            android:id="@+id/cancelhos"
            android:textSize="25dp"/>


    </LinearLayout>
</LinearLayout>
